--- a/HTML vs Javascript/test/screen_lock.html
+++ b/HTML vs Javascript/test/screen_lock.html
@@ -1,120 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hình vuông 3x3</title>
     <style>
-        .container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 10px;
-            width: 400px;
-            margin: 0 auto;
+        #canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
         }
-
-        .outer-circle {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            border: 2px solid black;
-            background-color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-
-        .inner-circle {
-            width: 60px;
-            height: 60px;
+        #circle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 20px;
+            height: 20px;
             border-radius: 50%;
             background-color: black;
-        }
-
-        .line {
-            position: absolute;
-            background-color: red;
+            z-index: 2;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-    <div class="outer-circle">
-        <div class="inner-circle"></div>
-    </div>
-</div>
+<div id="canvas"></div>
+<div id="circle"></div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-    $(document).ready(function() {
-        var isMouseDown = false;
-        var currentCircle = null;
-        var line = null;
+    var canvas = document.getElementById('canvas');
+    var circle = document.getElementById('circle');
+    var isDrawing = false;
+    var startX, startY;
 
-        $('.outer-circle').mousedown(function(e) {
-            isMouseDown = true;
-            currentCircle = $(this);
-            var circlePosition = currentCircle.offset();
-            var startX = circlePosition.left + currentCircle.width() / 2;
-            var startY = circlePosition.top + currentCircle.height() / 2;
-
-            line = $('<div class="line"></div>');
-            line.css({
-                left: startX + 'px',
-                top: startY + 'px'
-            });
-            $('body').append(line);
-        });
-
-        $(document).mousemove(function(e) {
-            if (isMouseDown && currentCircle !== null) {
-                var circlePosition = currentCircle.offset();
-                var centerX = circlePosition.left + currentCircle.width() / 2;
-                var centerY = circlePosition.top + currentCircle.height() / 2;
-                var endX = e.pageX;
-                var endY = e.pageY;
-                var deltaX = endX - centerX;
-                var deltaY = endY - centerY;
-                var angle = Math.atan2(deltaY, deltaX);
-                var distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-                line.css({
-                    width: distance + 'px',
-                    transform: 'translate(' + centerX + 'px, ' + centerY + 'px) rotate(' + angle + 'rad)'
-                });
-            }
-        });
-
-        $(document).mouseup(function() {
-            isMouseDown = false;
-            if (currentCircle !== null) {
-                currentCircle = null;
-                line.remove();
-            }
-        });
+    circle.addEventListener('mousedown', function(event) {
+        isDrawing = true;
+        startX = circle.offsetLeft;
+        startY = circle.offsetTop;
     });
+
+    document.addEventListener('mousemove', function(event) {
+        if (isDrawing) {
+            var mouseX = event.pageX;
+            var mouseY = event.pageY;
+
+            drawLine(startX, startY, mouseX, mouseY);
+        }
+    });
+
+    document.addEventListener('mouseup', function(event) {
+        isDrawing = false;
+        canvas.innerHTML = '';
+    });
+
+    function drawLine(startX, startY, endX, endY) {
+        var centerX = startX + circle.offsetWidth / 2;
+        var centerY = startY + circle.offsetHeight / 2;
+
+        canvas.innerHTML = '<svg width="' + window.innerWidth + '" height="' + window.innerHeight + '">' +
+            '<line x1="' + centerX + '" y1="' + centerY + '" x2="' + endX + '" y2="' + endY + '" stroke="black" />' +
+            '</svg>';
+    }
 </script>
 </body>
 </html>
